2005-06-21  Geoffrey Garen  <ggaren@apple.com>

        Patch contributed by Niels Leenheer <niels.leenheer@gmail.com>

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3370
        (Safari can't handle strange frame dimensions)

        Reviewed by Darin.

        * khtml/dom/dom_string.cpp:
        (DOM::DOMString::toCoordsArray):
        * khtml/dom/dom_string.h:
        * khtml/html/html_imageimpl.cpp:
        (HTMLAreaElementImpl::parseMappedAttribute):
        * khtml/xml/dom_atomicstring.h:
        (DOM::AtomicString::toCoordsArray):
        * khtml/xml/dom_stringimpl.cpp:
        (DOM::parseLength):
        (DOM::DOMStringImpl::toCoordsArray):
        (DOM::DOMStringImpl::toLengthArray):
        * khtml/xml/dom_stringimpl.h:

        Test cases added: 
        * layout-tests/fast/frames/invalid-expected.txt: Added.
        * layout-tests/fast/frames/invalid.html: Added.
        * layout-tests/fast/frames/valid-expected.txt: Added.
        * layout-tests/fast/frames/valid.html: Added.

2005-06-21  Geoffrey Garen  <ggaren@apple.com>

        - fixed <rdar://problem/4155049> javascript function named as "opener" doesn't get called because of window.opener property

        Test cases only, fix is in JavaScriptCore

        Reviewed by cblu.

        Test cases added: 

        * layout-tests/fast/js/global-opener-function-expected.txt: Added.
        * layout-tests/fast/js/global-opener-function.html: Added.

2005-06-21  David Harrison  <harrison@apple.com>

        Reviewed by Justin.
        
        - show class and style attributes for element nodes
        - nil check the node being showTree'd
        - add Position::showTree()

        Test cases added: None needed for this debug-only utility code.

        * khtml/editing/selection.cpp:
        (khtml::Selection::showTree):
        - nil check the node
        * khtml/editing/visible_position.cpp:
        (khtml::VisiblePosition::previousVisiblePosition):
        - comments