@@ -1,0 +1,6 @@
+This will test string.replace with {n, m} regexp patterns.
+Start Value	Replace	End Value
+Change YY to YYYY	dtFormat.replace(/Y{1,4}/g,"YYYY")	YYYY
+Change MM to M	dtFormat.replace(/M{1,2}/g,"M")	M
+Change YY to MMMM	dtFormat.replace(/Y{1,4}/g,"MMMM")	MMMM
+
